--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "dotenv": "^16.0.1",
     "expo": "~46.0.7",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.9.2",
