--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.9.2",
     "react": "18.0.0",
-    "react-native": "0.69.4"
+    "react-native": "0.69.4",
+    "expo-constants": "~13.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
