--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-config": "^0.3.22",
     "dotenv": "^16.0.1",
     "expo": "~46.0.7",
+    "expo-constants": "~13.2.3",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.9.2",
     "react": "18.0.0",
-    "react-native": "0.69.4",
-    "expo-constants": "~13.2.3"
+    "react-native": "0.69.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
