--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "expo-constants": "~13.2.3",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.9.2",
+    "native-base": "^3.4.13",
     "react": "18.0.0",
-    "react-native": "0.69.4"
+    "react-native": "0.69.4",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-svg": "12.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
