--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "expo-constants": "~13.2.3",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.9.2",
-    "native-base": "^3.4.13",
+    "native-base": "3.4.17",
     "react": "18.0.0",
     "react-native": "0.69.4",
     "react-native-safe-area-context": "4.3.1",
