--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.1",
     "expo": "~46.0.7",
     "expo-constants": "~13.2.3",
+    "expo-notifications": "~0.16.1",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.9.2",
     "native-base": "3.4.17",
